2017-02-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Fix translatable form validation messages
        https://bugs.webkit.org/show_bug.cgi?id=167984

        Reviewed by Michael Catanzaro.

        Most of them are just wrong. Use the same mesages than mac, which also makes some tests pass.

        Fixes: fast/forms/validation-message-maxLength.html
               fast/forms/validationMessage.html

        * platform/gtk/LocalizedStringsGtk.cpp:
        (WebCore::validationMessageValueMissingText):
        (WebCore::validationMessageValueMissingForCheckboxText):
        (WebCore::validationMessageValueMissingForFileText):
        (WebCore::validationMessageValueMissingForMultipleFileText):
        (WebCore::validationMessageValueMissingForRadioText):
        (WebCore::validationMessageValueMissingForSelectText):
        (WebCore::validationMessageTypeMismatchText):
        (WebCore::validationMessageTypeMismatchForEmailText):
        (WebCore::validationMessageTypeMismatchForMultipleEmailText):
        (WebCore::validationMessageTypeMismatchForURLText):
        (WebCore::validationMessagePatternMismatchText):
        (WebCore::validationMessageTooShortText):
        (WebCore::validationMessageTooLongText):
        (WebCore::validationMessageRangeUnderflowText):
        (WebCore::validationMessageRangeOverflowText):
        (WebCore::validationMessageStepMismatchText):
        (WebCore::validationMessageBadInputForNumberText):

2017-02-08  Chris Dumez  <cdumez@apple.com>

        Add support for enhanced privacy diagnostic logging
        https://bugs.webkit.org/show_bug.cgi?id=167948
        <rdar://problem/30385112>

        Reviewed by Antti Koivisto.

        Add new logDiagnosticMessageWithEnhancedPrivacy() method to DiagnosticLoggingClient
        that is used for enhanced privacy logging. Start using this new API to log domains
        that are visited.

        * loader/EmptyClients.cpp:
        * loader/FrameLoader.cpp: