@@ -1,3 +1,14 @@
+2017-02-08  Aakash Jain  <aakash_jain@apple.com>
+
+        Remove unused method WebCore::PluginData::pluginNameForMimeType
+        https://bugs.webkit.org/show_bug.cgi?id=167986
+
+        Reviewed by Anders Carlsson.
+
+        * plugins/PluginData.cpp:
+        (WebCore::PluginData::pluginNameForWebVisibleMimeType): Deleted.
+        * plugins/PluginData.h: Removed pluginNameForWebVisibleMimeType.
+
 2017-02-08  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Fix translatable form validation messages
